--- a/interactive-rating-component-main/index.html
+++ b/interactive-rating-component-main/index.html
@@ -3,47 +3,47 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="stylesheet" href="./styles.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
   <title>Frontend Mentor | Interactive rating component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-
-  <!-- Rating state start -->
-
-  How did we do?
-
-  Please let us know how we did with your support request. All feedback is appreciated 
-  to help us improve our offering!
-
-  1 2 3 4 5
-
-  Submit
-
-  <!-- Rating state end -->
-
-  <!-- Thank you state start -->
-
-  You selected <!-- Add rating here --> out of 5
-
-  Thank you!
-
-  We appreciate you taking the time to give a rating. If you ever need more support, 
-  don’t hesitate to get in touch!
-
-  <!-- Thank you state end -->
-
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <!-- Main Container -->
+  <article id="main-tab">
+    <div class="icon-container">
+      <img src="./images/icon-star.svg" alt="star-icon">
+    </div>
+    <h1>How did we do?</h1>
+    <p>Please let us know how we did with your support request. All feedback is appreciated 
+      to help us improve our offering!
+    </p>
+    <div class="rating-container" id="rating-container">
+      <button class="rating-btn" id="1">1</button>
+      <button class="rating-btn" id="2">2</button>
+      <button class="rating-btn" id="3">3</button>
+      <button class="rating-btn" id="4">4</button>
+      <button class="rating-btn" id="5">5</button>
+    </div>
+    <button class="btn-submit" id="button">Submit</button>
+  </article>
+  <!-- Rating Container -->
+  <article class="thanks-tab hide" id="hidden-tab">
+    <div class="image-container">
+      <img src="./images/illustration-thank-you.svg" alt="thank you image">
+    </div>
+    <p><span class="orange-highlight">You selected <span id="rated">0</span> out of 5</span></p>
+    <h1>Thank you!</h1>
+    <p>We appreciate you taking the time to give a rating. If you ever need more support, 
+      don’t hesitate to get in touch!
+    </p>
+  </article>
+  <footer>
+    <p class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://github.com/vidhitvarma" target="_blank">Vidhit Varma</a>.
+    </p>
+</footer>
+  <!-- Script -->
+  <script src="./app.js"></script>
 </body>
 </html>
