--- a/faq-accordion-card-main/index.html
+++ b/faq-accordion-card-main/index.html
@@ -3,38 +3,84 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="stylesheet" href="./styles.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
   <title>Frontend Mentor | FAQ Accordion Card</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-  How many team members can I invite?
-  You can invite up to 2 additional users on the Free plan. There is no limit on 
-  team members for the Premium plan.
-
-  What is the maximum file upload size?
-  No more than 2GB. All files in your account must fit your allotted storage space.
-
-  How do I reset my password?
-  Click “Forgot password” from the login page or “Change password” from your profile page.
+  <main>
+    <div class="img-container">
+      <div class="woman-image">
+        <img src="./images/illustration-woman-online-mobile.svg" alt="" class="mobile-img">
+        <img src="./images/illustration-woman-online-desktop.svg" alt="" class="desktop-img">
+      </div>
+      <div class="box">
+        <img src="./images/illustration-box-desktop.svg" alt="" class="box-img">
+      </div>
+      <div class="background-img">
+        <img src="./images/bg-pattern-mobile.svg" alt="" class="bg-mobile">
+        <img src="./images/bg-pattern-desktop.svg" alt="" class="bg-desktop">
+      </div>
+    </div>
+    <h1 class="faq">FAQ</h1>
+    <article class="data-container" id="dt-container">
+      <div class="question">
+        <p class="header" id="header">How many team members can I invite?</p>
+        <img src="./images/icon-arrow-down.svg" alt="arrow-down">
+      </div>
+      <p class="answer hidden">
+        You can invite up to 2 additional users on the Free plan. There is no limit on 
+        team members for the Premium plan.
+      </p>
+    </article>
+    <article class="data-container" id="dt-container">
+      <div class="question">
+        <p class="header" id="header">What is the maximum file upload size?</p>
+        <img src="./images/icon-arrow-down.svg" alt="arrow-down">
+      </div>
+      <p class="answer hidden">
+        No more than 2GB. All files in your account must fit your allotted storage space.
+      </p>
+    </article>
+    <article class="data-container" id="dt-container">
+      <div class="question">
+        <p class="header" id="header">How do I reset my password?</p>
+        <img src="./images/icon-arrow-down.svg" alt="arrow-down">
+      </div>
+      <p class="answer hidden">
+        Click “Forgot password” from the login page or “Change password” from your profile page.
   A reset link will be emailed to you.
+      </p>
+    </article>
+    <article class="data-container" id="dt-container">
+      <div class="question">
+        <p class="header" id="header">
+          Can I cancel my subscription?
+        </p>
+        <img src="./images/icon-arrow-down.svg" alt="arrow-down">
+      </div>
+      <p class="answer hidden">
+        Yes! Send us a message and we’ll process your request no questions asked.
+      </p>
+    </article>
+    <article class="data-container" id="dt-container">
+      <div class="question">
+        <p class="header" id="header">Do you provide additional support?</p>
+        <img src="./images/icon-arrow-down.svg" alt="arrow-down">
+      </div>
+      <p class="answer hidden">
+        Chat and email support is available 24/7. Phone lines are open during normal business hours. 
+      </p>
+    </article>
+  </main>
+  <footer>
+    <p class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://github.com/vidhitvarma" target="_blank">Vidhit Varma</a>.
+    </p>
+  </footer>
 
-  Can I cancel my subscription?
-  Yes! Send us a message and we’ll process your request no questions asked.
-
-  Do you provide additional support?
-  Chat and email support is available 24/7. Phone lines are open during normal business hours.
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <!-- SCRIPT TAG -->
+  <script src="./app.js"></script>
 </body>
 </html>
