--- a/article-preview-component-master/index.html
+++ b/article-preview-component-master/index.html
@@ -3,34 +3,71 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="stylesheet" href="./styles.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Article preview component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
+  <article class="main-box">
+    <div class="top-container">
+      <img src="./images/drawers.jpg" alt="top-image">
+    </div>
+    <div class="text-container">
+      <h1>Shift the overall look and feel by adding these wonderful 
+        touches to furniture in your home
+      </h1>
+      <p class="description">Ever been in a room and felt like something was missing? Perhaps 
+        it felt slightly bare and uninviting. I’ve got some simple tips 
+        to help you make any room feel complete.
+      </p>
+    <div class="changing-container">
+      <!-- Profile Container -->
+      <div class="profile-container" id="profile-container">
+        <div class="profile">
+          <picture class="person-img">
+            <img src="./images/avatar-michelle.jpg" alt="Michelle">
+          </picture>
+          <p class="name">Michelle Appleton <span class="date">28 Jun 2020</span></p>
+        </div>
+        <picture class="share">
+          <img src="./images/icon-share.svg" alt="" class="share-icon" id="share-icon">
+        </picture>
+      </div> 
+      <!-- Share container -->
+      <div class="share-container hidden" id="share-container">
+        <div class="details">
+          <p>Share</p>
+          <picture class="social-icon">
+            <a href="">
+              <img src="./images/icon-facebook.svg" alt="fb">
+            </a>
+          </picture>
+          <picture class="social-icon">
+            <a href="">
+              <img src="./images/icon-twitter.svg" alt="twitter">
+            </a>
+          </picture>
+          <picture class="social-icon">
+            <a href="">
+              <img src="./images/icon-pinterest.svg" alt="pinterest">
+            </a>
+          </picture>
+        </div>
+        <picture class="share invert">
+          <img src="./images/icon-share.svg" alt="" class="share-icon">
+        </picture>
+      </div>
+    </div>
+  </article>
+  <footer>
+    <p class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://github.com/vidhitvarma" target="_blank">Vidhit Varma</a>.
+    </p>
+  </footer>
 
-  Shift the overall look and feel by adding these wonderful 
-  touches to furniture in your home
-
-  Ever been in a room and felt like something was missing? Perhaps 
-  it felt slightly bare and uninviting. I’ve got some simple tips 
-  to help you make any room feel complete.
-
-  Michelle Appleton
-  28 Jun 2020
-
-  Share
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+<!-- Script tag -->
+<script src="./app.js"></script>
 </body>
 </html>
