--- a/faq-accordion-card-main/index.html
+++ b/faq-accordion-card-main/index.html
@@ -12,65 +12,69 @@
     <div class="img-container">
       <div class="woman-image">
         <img src="./images/illustration-woman-online-mobile.svg" alt="" class="mobile-img">
-        <img src="./images/illustration-woman-online-desktop.svg" alt="" class="desktop-img">
-      </div>
-      <div class="box">
-        <img src="./images/illustration-box-desktop.svg" alt="" class="box-img">
+        <img src="./images/illustration-woman-online-desktop.svg" alt="woman-image" class="desktop-img"> 
       </div>
       <div class="background-img">
         <img src="./images/bg-pattern-mobile.svg" alt="" class="bg-mobile">
-        <img src="./images/bg-pattern-desktop.svg" alt="" class="bg-desktop">
       </div>
+      <img src="./images/illustration-box-desktop.svg" alt="box-icon" class="box-icon"> 
     </div>
-    <h1 class="faq">FAQ</h1>
-    <article class="data-container" id="dt-container">
-      <div class="question">
-        <p class="header" id="header">How many team members can I invite?</p>
-        <img src="./images/icon-arrow-down.svg" alt="arrow-down">
-      </div>
-      <p class="answer hidden">
-        You can invite up to 2 additional users on the Free plan. There is no limit on 
-        team members for the Premium plan.
-      </p>
-    </article>
-    <article class="data-container" id="dt-container">
-      <div class="question">
-        <p class="header" id="header">What is the maximum file upload size?</p>
-        <img src="./images/icon-arrow-down.svg" alt="arrow-down">
-      </div>
-      <p class="answer hidden">
-        No more than 2GB. All files in your account must fit your allotted storage space.
-      </p>
-    </article>
-    <article class="data-container" id="dt-container">
-      <div class="question">
-        <p class="header" id="header">How do I reset my password?</p>
-        <img src="./images/icon-arrow-down.svg" alt="arrow-down">
-      </div>
-      <p class="answer hidden">
-        Click “Forgot password” from the login page or “Change password” from your profile page.
-  A reset link will be emailed to you.
-      </p>
-    </article>
-    <article class="data-container" id="dt-container">
-      <div class="question">
-        <p class="header" id="header">
-          Can I cancel my subscription?
+    <article class="question-container">
+      <h1 class="faq">FAQ</h1>
+      <!-- Question 1 -->
+      <div class="data-container" id="dt-container">
+        <div class="question">
+          <p class="header" id="header">How many team members can I invite?</p>
+          <img src="./images/icon-arrow-down.svg" alt="arrow-down" class="arrow">
+        </div>
+        <p class="answer hidden">
+          You can invite up to 2 additional users on the Free plan. There is no limit on 
+          team members for the Premium plan.
         </p>
-        <img src="./images/icon-arrow-down.svg" alt="arrow-down">
       </div>
-      <p class="answer hidden">
-        Yes! Send us a message and we’ll process your request no questions asked.
-      </p>
-    </article>
-    <article class="data-container" id="dt-container">
-      <div class="question">
-        <p class="header" id="header">Do you provide additional support?</p>
-        <img src="./images/icon-arrow-down.svg" alt="arrow-down">
+      <!-- Question 2 -->
+      <div class="data-container" id="dt-container">
+        <div class="question">
+          <p class="header" id="header">What is the maximum file upload size?</p>
+          <img src="./images/icon-arrow-down.svg" alt="arrow-down" class="arrow">
+        </div>
+        <p class="answer hidden">
+          No more than 2GB. All files in your account must fit your allotted storage space.
+        </p>
       </div>
-      <p class="answer hidden">
-        Chat and email support is available 24/7. Phone lines are open during normal business hours. 
-      </p>
+      <!-- Question 3 -->
+      <div class="data-container" id="dt-container">
+        <div class="question">
+          <p class="header" id="header">How do I reset my password?</p>
+          <img src="./images/icon-arrow-down.svg" alt="arrow-down" class="arrow">
+        </div>
+        <p class="answer hidden">
+          Click “Forgot password” from the login page or “Change password” from your profile page.
+    A reset link will be emailed to you.
+        </p>
+      </div>
+      <!-- Question 4 -->
+      <div class="data-container" id="dt-container">
+        <div class="question">
+          <p class="header" id="header">
+            Can I cancel my subscription?
+          </p>
+          <img src="./images/icon-arrow-down.svg" alt="arrow-down" class="arrow">
+        </div>
+        <p class="answer hidden">
+          Yes! Send us a message and we’ll process your request no questions asked.
+        </p>
+      </div>
+      <!-- Question 5 -->
+      <div class="data-container" id="dt-container">
+        <div class="question">
+          <p class="header" id="header">Do you provide additional support?</p>
+          <img src="./images/icon-arrow-down.svg" alt="arrow-down" class="arrow">
+        </div>
+        <p class="answer hidden">
+          Chat and email support is available 24/7. Phone lines are open during normal business hours. 
+        </p>
+      </div>
     </article>
   </main>
   <footer>
