--- a/faq-accordion-card-main/index.html
+++ b/faq-accordion-card-main/index.html
@@ -22,9 +22,9 @@
     <article class="question-container">
       <h1 class="faq">FAQ</h1>
       <!-- Question 1 -->
-      <div class="data-container" id="dt-container">
+      <div class="data-container">
         <div class="question">
-          <p class="header" id="header">How many team members can I invite?</p>
+          <p class="header">How many team members can I invite?</p>
           <img src="./images/icon-arrow-down.svg" alt="arrow-down" class="arrow">
         </div>
         <p class="answer hidden">
@@ -33,9 +33,9 @@
         </p>
       </div>
       <!-- Question 2 -->
-      <div class="data-container" id="dt-container">
+      <div class="data-container">
         <div class="question">
-          <p class="header" id="header">What is the maximum file upload size?</p>
+          <p class="header">What is the maximum file upload size?</p>
           <img src="./images/icon-arrow-down.svg" alt="arrow-down" class="arrow">
         </div>
         <p class="answer hidden">
@@ -43,9 +43,9 @@
         </p>
       </div>
       <!-- Question 3 -->
-      <div class="data-container" id="dt-container">
+      <div class="data-container">
         <div class="question">
-          <p class="header" id="header">How do I reset my password?</p>
+          <p class="header">How do I reset my password?</p>
           <img src="./images/icon-arrow-down.svg" alt="arrow-down" class="arrow">
         </div>
         <p class="answer hidden">
@@ -54,9 +54,9 @@
         </p>
       </div>
       <!-- Question 4 -->
-      <div class="data-container" id="dt-container">
+      <div class="data-container">
         <div class="question">
-          <p class="header" id="header">
+          <p class="header">
             Can I cancel my subscription?
           </p>
           <img src="./images/icon-arrow-down.svg" alt="arrow-down" class="arrow">
@@ -66,9 +66,9 @@
         </p>
       </div>
       <!-- Question 5 -->
-      <div class="data-container" id="dt-container">
+      <div class="data-container">
         <div class="question">
-          <p class="header" id="header">Do you provide additional support?</p>
+          <p class="header" >Do you provide additional support?</p>
           <img src="./images/icon-arrow-down.svg" alt="arrow-down" class="arrow">
         </div>
         <p class="answer hidden">
