--- a/huddle-landing-page-with-alternating-feature-blocks-master/index.html
+++ b/huddle-landing-page-with-alternating-feature-blocks-master/index.html
@@ -19,14 +19,16 @@
       </button>
     </nav>
     <article class="header__textbox">
-      <h1>
-        Build The Community Your Fans Will Love
-      </h1>
-      <p>
-        Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-  Create connections with your users as you engage in genuine discussion.
-      </p>
-      <button class="cta--start">Get Started For Free</button>
+      <div class="textbox">
+        <h1>
+          Build The Community Your Fans Will Love
+        </h1>
+        <p>
+          Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
+    Create connections with your users as you engage in genuine discussion.
+        </p>
+        <button class="cta--start">Get Started For Free</button>
+      </div>
       <picture class="header__image">
         <img src="./images/illustration-mockups.svg" alt="">
       </picture>
@@ -35,36 +37,42 @@
   <main>
     <!-- Container 1 -->
     <article class="data-container">
+      <div class="dt-text">
+        <p class="bold-title">Grow Together</p>
+        <p class="dt-para">
+          Generate meaningful discussions with your audience and build a strong, loyal community. 
+    Think of the insightful conversations you miss out on with a feedback form.
+        </p>
+      </div>
       <picture class="container-image">
         <img src="./images/illustration-grow-together.svg" alt="">
       </picture>
-      <p class="bold-title">Grow Together</p>
-      <p class="dt-text">
-        Generate meaningful discussions with your audience and build a strong, loyal community. 
-  Think of the insightful conversations you miss out on with a feedback form.
-      </p>
     </article>
     <!-- Container 2 -->
     <article class="data-container reversed-container">
+      <div class="dt-text">
+        <p class="bold-title">Flowing Conversations</p>
+        <p class="dt-para">
+          You wouldn't paginate a conversation in real life, so why do it online? Our threads 
+          have just-in-time loading for a more natural flow.
+        </p>
+      </div>
       <picture class="container-image">
         <img src="./images/illustration-flowing-conversation.svg" alt="">
       </picture>
-      <p class="bold-title">Flowing Conversations</p>
-      <p class="dt-text">
-        You wouldn't paginate a conversation in real life, so why do it online? Our threads 
-  have just-in-time loading for a more natural flow.
-      </p>
     </article>
     <!-- Container 3 -->
     <article class="data-container">
+      <div class="dt-text">
+        <p class="bold-title">Your Users</p>
+        <p class="dt-para">
+          It takes no time at all to integrate Huddle with your app's authentication solution. 
+    This means, once signed in to your app, your users can start chatting immediately.
+        </p>
+      </div>
       <picture class="container-image">
         <img src="./images/illustration-your-users.svg" alt="">
       </picture>
-      <p class="bold-title">Your Users</p>
-      <p class="dt-text">
-        It takes no time at all to integrate Huddle with your app's authentication solution. 
-  This means, once signed in to your app, your users can start chatting immediately.
-      </p>
     </article>
     <!-- Another cta -->
     <article class=" data-container abs-cta">
@@ -73,46 +81,48 @@
     </article>
   </main>
   <footer class="site-footer">
+    <div class="max-width">
     <!-- left container -->
-    <div class="footer-container container-a">
-      <picture class="footer__logo">
-        <img src="./images/logo.svg" alt="Huddle">
-      </picture>
-      <div class="flex-divide">
-        <img src="./images/icon-location.svg" alt="icon-location" class="icon-display">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-            incididunt ut labore et dolore magna aliqua
-          </p>
+      <div class="footer-container container-a">
+        <picture class="footer__logo">
+          <img src="./images/logo.svg" alt="Huddle">
+        </picture>
+        <div class="flex-divide">
+          <img src="./images/icon-location.svg" alt="icon-location" class="icon-display">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+              incididunt ut labore et dolore magna aliqua
+            </p>
+        </div>
+        <div class="flex-divide">
+          <img src="./images/icon-phone.svg" alt="icon-location" class="icon-display">
+            <p>+1-543-123-4567</p>
+        </div>
+        <div class="flex-divide">
+          <img src="./images/icon-email.svg" alt="icon-location" class="icon-display">
+            <p>example@huddle.com</p>
+        </div>
       </div>
-      <div class="flex-divide">
-        <img src="./images/icon-phone.svg" alt="icon-location" class="icon-display">
-          <p>+1-543-123-4567</p>
+      <!-- left-center container -->
+      <div class="footer-container container-b">
+        <p><a href="#" class="self-links">About Us</a></p>
+        <p><a href="#" class="self-links">What We Do</a></p>
+        <p><a href="#" class="self-links">FAQ</a></p>
       </div>
-      <div class="flex-divide">
-        <img src="./images/icon-email.svg" alt="icon-location" class="icon-display">
-          <p>example@huddle.com</p>
+      <!-- right-center container -->
+      <div class="footer-container container-c">
+        <p><a href="#" class="self-links">Career</a></p>
+        <p><a href="#" class="self-links">Blog</a></p>
+        <p><a href="#" class="self-links">Contact Us</a></p>
       </div>
-    </div>
-    <!-- left-center container -->
-    <div class="footer-container container-b">
-      <p><a href="#" class="self-links">About Us</a></p>
-      <p><a href="#" class="self-links">What We Do</a></p>
-      <p><a href="#" class="self-links">FAQ</a></p>
-    </div>
-    <!-- right-center container -->
-    <div class="footer-container container-c">
-      <p><a href="#" class="self-links">Career</a></p>
-      <p><a href="#" class="self-links">Blog</a></p>
-      <p><a href="#" class="self-links">Contact Us</a></p>
-    </div>
-    <!-- right container -->
-    <div class="footer-container container-d">
-      <div class="social-icons">
-        <a href="#" class="social-icon"><i class="fa-brands fa-facebook-f"></i></a>
-          <a href="#" class="social-icon"><i class="fa-brands fa-twitter"></i></a>
-          <a href="#" class="social-icon"><i class="fa-brands fa-instagram"></i></a>
+      <!-- right container -->
+      <div class="footer-container container-d">
+        <div class="social-icons">
+          <a href="#" class="social-icon"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="#" class="social-icon"><i class="fa-brands fa-twitter"></i></a>
+            <a href="#" class="social-icon"><i class="fa-brands fa-instagram"></i></a>
+        </div>
+        <p class="copyright">&copy; Copyright 2018 Huddle. All rights reserved.</p>
       </div>
-      <p class="copyright">&copy; Copyright 2018 Huddle. All rights reserved.</p>
     </div>
   </footer>
   <!-- Attribution -->
